Css first draft

--- a/Chess.html
+++ b/Chess.html
@@ -4,31 +4,12 @@
 <head>
     <title>Chess Board</title>
     <meta charset="UTF-8">
-    <style type="text/css">
-        * {
-            margin: 0;
-            padding: 0;
-        }
-
-        table {
-            border: 2px solid black;
-            width: 500px;
-            height: 500px;
-            margin: auto;
-        }
-
-        .black {
-            background-color: black;
-            width: 50px;
-        }
-
-        .white {
-            color: rgb(255, 255, 255);
-        }
+    <link rel="stylesheet" href="chess.css">        
     </style>
 </head>
 
 <body>
+    <div class="outter">
     <table>
         <tr>
             
@@ -123,4 +104,5 @@
 
 
     </table>
+</div>
 </body>
